--- a/views/pages/major/index.html
+++ b/views/pages/major/index.html
@@ -1,17 +1,41 @@
+<script>
+    //  main.js
+    function onUpdate(id, discontinued) {
+        let formData = new FormData();
+        formData.append("discontinued", discontinued);
+        // POST request using fetch()
+        fetch("<%= baseUrl %>/major/" + id, {
+
+            // Adding method type
+            method: "POST",
+
+            // Adding body or contents to send
+            body: new URLSearchParams([...formData]),
+
+            // Adding headers to the request
+            // headers: {
+            // "Content-type": "application/json; charset=UTF-8"
+            // }
+        })
+
+        // Converting to JSON
+        // .then(response => response.json())
+
+        // Displaying results to console
+        // .then(json => console.log(json));
+    }
+</script>
 <div class="row">
     <div class="col-sm-3"></div>
     <div class="col-sm-6">
         <div class="d-flex justify-content-between">
-            <div><h1>Majors</h1></div>
+            <div>
+                <h1>Majors</h1>
+            </div>
             <div>
                 <a href="<%= baseUrl %>/major/new" data-cy="new-major-link">
-                    <i
-                        class="fa fa-plus-circle"
-                        style="font-size: 48px; color: black"
-                        data-toggle="tooltip"
-                        data-placement="right"
-                        title="Add a new major"
-                    >
+                    <i class="fa fa-plus-circle" style="font-size: 48px; color: black" data-toggle="tooltip"
+                        data-placement="right" title="Add a new major">
                     </i>
                 </a>
             </div>
@@ -29,12 +53,8 @@
                         <th class="text-left">Name</th>
                         <th class="text-nowrap">
                             Discontinued&nbsp;
-                            <i
-                                class="fa fa-info-circle"
-                                data-toggle="tooltip"
-                                data-placement="right"
-                                title="After a major is discontinued, it can no longer be added to student profiles. It will remain on profiles where it was already present."
-                            >
+                            <i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right"
+                                title="After a major is discontinued, it can no longer be added to student profiles. It will remain on profiles where it was already present.">
                             </i>
                         </th>
                     </tr>
@@ -53,51 +73,21 @@
                             <% } %>
                         </td>
                         <td class="pt-0 pb-0">
-                            <form
-                                method="POST"
-                                action="<%= baseUrl %>/major/<%= major.id %>"
-                                class="pl-5"
-                            >
-                                <% if (major.discontinued === "Yes") { %>
-                                <input
-                                    type="hidden"
-                                    name="discontinued"
-                                    value="No"
-                                />
-                                <button
-                                    style="
-                                        border: none;
-                                        background-color: transparent;
-                                    "
-                                    type="submit"
-                                    id="Yes<%= count %>"
-                                >
-                                    <i
-                                        class="fa fa-check-square-o"
-                                        style="font-size: 150%"
-                                    ></i>
-                                </button>
-                                <% } else { %>
-                                <input
-                                    type="hidden"
-                                    name="discontinued"
-                                    value="Yes"
-                                />
-                                <button
-                                    style="
-                                        border: none;
-                                        background-color: transparent;
-                                    "
-                                    type="submit"
-                                    id="No<%= count %>"
-                                >
-                                    <i
-                                        class="fa fa-square-o"
-                                        style="font-size: 150%"
-                                    ></i>
-                                </button>
-                                <% } %>
-                            </form>
+                            <!-- <form method="POST" action="<%= baseUrl %>/major/<%= major.id %>" class="pl-5"> -->
+                            <% if (major.discontinued === "Yes") { %>
+                            <!-- <input type="hidden" name="discontinued" value="No" /> -->
+                            <button style="border: none;background-color: transparent;"
+                                onclick="onUpdate(<%= major.id %>, 'Yes')" id="Yes<%= count %>">
+                                <i class="fa fa-check-square-o" style="font-size: 150%"></i>
+                            </button>
+                            <% } else { %>
+                            <!-- <input type="hidden" name="discontinued" value="Yes" /> -->
+                            <button style="border: none;background-color: transparent;"
+                                onclick="onUpdate(<%= major.id %>, 'No')" id="No<%= count %>">
+                                <i class="fa fa-square-o" style="font-size: 150%"></i>
+                            </button>
+                            <% } %>
+                            <!-- </form> -->
                         </td>
                     </tr>
                     <% }); }%>
