Complete submit via fetch

--- a/assets/styles/de.css
+++ b/assets/styles/de.css
@@ -3,6 +3,10 @@
     color:white;
 }
 
+.discontinued {
+  text-decoration: line-through;
+}
+
 /* Smaller header fonts for screen widths <= 600px.
     (Percentages apply to *parent's* font size.)
 */
