--- a/views/pages/browser/registerForm.html
+++ b/views/pages/browser/registerForm.html
@@ -28,23 +28,12 @@
 
         <form name="register" method="get" action="<%= baseUrl %>/visit">
             <div class="form-group">
-                <input
-                    type="text"
-                    class="form-control"
-                    autofocus
-                    name="location"
-                    placeholder="Location"
-                    maxlength="255"
-                    required
-                />
+                <input type="text" class="form-control" autofocus name="location" placeholder="Location" maxlength="255"
+                    required aria-label="Location" />
+
             </div>
             <div class="text-right">
-                <button
-                    id="submitButton"
-                    type="submit"
-                    class="btn btn-dark"
-                    onclick="return validateForm()"
-                >
+                <button id="submitButton" type="submit" class="btn btn-dark" onclick="return validateForm()">
                     Register
                 </button>
             </div>
