--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -1,14 +1,11 @@
 <div class="d-flex justify-content-between">
-    <div><h1>Visits</h1></div>
     <div>
-        <a href="<%= baseUrl %>/visit/download">
-            <i
-                class="fa fa-download"
-                style="font-size: 48px; color: black"
-                data-toggle="tooltip"
-                data-placement="right"
-                title="Download all visit data"
-            >
+        <h1>Visits</h1>
+    </div>
+    <div>
+        <a href="<%= baseUrl %>/visit/download" aria-label="Download all visit data">
+            <i class="fa fa-download" style="font-size: 48px; color: black" data-toggle="tooltip" data-placement="right"
+                title="Download all visit data">
             </i>
         </a>
     </div>
