--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -49,7 +49,8 @@
     <% try { %> <% if (typeof session.role !== "undefined") { %>
     <nav class="navbar fixed-top navbar-expand-md navbar-dark de-colors" data-cy="navbar">
         <a href="#" class="navbar-brand">Naylor Learning Center</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
+            aria-label="Navigation Menu">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
