--- a/views/pages/major/index.html
+++ b/views/pages/major/index.html
@@ -2,16 +2,13 @@
     <div class="col-sm-3"></div>
     <div class="col-sm-6">
         <div class="d-flex justify-content-between">
-            <div><h1>Majors</h1></div>
             <div>
-                <a href="<%= baseUrl %>/major/new" data-cy="new-major-link">
-                    <i
-                        class="fa fa-plus-circle"
-                        style="font-size: 48px; color: black"
-                        data-toggle="tooltip"
-                        data-placement="right"
-                        title="Add a new major"
-                    >
+                <h1>Majors</h1>
+            </div>
+            <div>
+                <a href="<%= baseUrl %>/major/new" data-cy="new-major-link" aria-label="Add a new major">
+                    <i class="fa fa-plus-circle" style="font-size: 48px; color: black" data-toggle="tooltip"
+                        data-placement="right" title="Add a new major">
                     </i>
                 </a>
             </div>
@@ -29,12 +26,8 @@
                         <th class="text-left">Name</th>
                         <th class="text-nowrap">
                             Discontinued&nbsp;
-                            <i
-                                class="fa fa-info-circle"
-                                data-toggle="tooltip"
-                                data-placement="right"
-                                title="After a major is discontinued, it can no longer be added to student profiles. It will remain on profiles where it was already present."
-                            >
+                            <i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right"
+                                title="After a major is discontinued, it can no longer be added to student profiles. It will remain on profiles where it was already present.">
                             </i>
                         </th>
                     </tr>
@@ -53,48 +46,22 @@
                             <% } %>
                         </td>
                         <td class="pt-0 pb-0">
-                            <form
-                                method="POST"
-                                action="<%= baseUrl %>/major/<%= major.id %>"
-                                class="pl-5"
-                            >
+                            <form method="POST" action="<%= baseUrl %>/major/<%= major.id %>" class="pl-5">
                                 <% if (major.discontinued === "Yes") { %>
-                                <input
-                                    type="hidden"
-                                    name="discontinued"
-                                    value="No"
-                                />
-                                <button
-                                    style="
+                                <input type="hidden" name="discontinued" value="No" />
+                                <button style="
                                         border: none;
                                         background-color: transparent;
-                                    "
-                                    type="submit"
-                                    id="Yes<%= count %>"
-                                >
-                                    <i
-                                        class="fa fa-check-square-o"
-                                        style="font-size: 150%"
-                                    ></i>
+                                    " type="checkbox" id="Yes<%= count %>">
+                                    <i class="fa fa-check-square-o" style="font-size: 150%"></i>
                                 </button>
                                 <% } else { %>
-                                <input
-                                    type="hidden"
-                                    name="discontinued"
-                                    value="Yes"
-                                />
-                                <button
-                                    style="
+                                <input type="hidden" name="discontinued" value="Yes" />
+                                <button style="
                                         border: none;
                                         background-color: transparent;
-                                    "
-                                    type="submit"
-                                    id="No<%= count %>"
-                                >
-                                    <i
-                                        class="fa fa-square-o"
-                                        style="font-size: 150%"
-                                    ></i>
+                                    " type="checkbox" id="No<%= count %>">
+                                    <i class="fa fa-square-o" style="font-size: 150%"></i>
                                 </button>
                                 <% } %>
                             </form>
