Fix majors tests

--- a/views/pages/major/index.html
+++ b/views/pages/major/index.html
@@ -71,6 +71,7 @@
                                     "
                                     type="submit"
                                     id="Yes<%= count %>"
+                                    data-cy="Yes<%= count %>"
                                 >
                                     <i
                                         class="fa fa-check-square-o"
@@ -90,6 +91,7 @@
                                     "
                                     type="submit"
                                     id="No<%= count %>"
+                                    data-cy="No<%= count %>"
                                 >
                                     <i
                                         class="fa fa-square-o"
