Add student profile tests

--- a/views/pages/student/updateForm.html
+++ b/views/pages/student/updateForm.html
@@ -11,6 +11,7 @@
                     class="form-control"
                     id="academicRank"
                     name="academicRank"
+                    required
                     autofocus
                 >
                     <%- generateOptions("academicRank"); %>
@@ -23,6 +24,7 @@
                     class="form-control"
                     id="residentialStatus"
                     name="residentialStatus"
+                    required
                 >
                     <%- generateOptions("residentialStatus"); %>
                 </select>
