Fix custom check box and tests

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -162,6 +162,7 @@
     <!--SCRIPTS-->
     <script src="/js/logoutTimer.js"></script>
     <script src="/js/preventMultiSubmit.js"></script>
+    <script src="/js/toggleCustomCheckbox.js"></script>
     <!--SCRIPTS END-->
 
     <!-- External, manually loaded scripts -->
