--- a/views/pages/sport/index.html
+++ b/views/pages/sport/index.html
@@ -1,18 +1,3 @@
-<script>
-    function onUpdate(id, rowNum) {
-        let discontinued = document.querySelector(`#name${rowNum}`).classList.toggle("discontinued") ? "Yes" : "No";
-        document.querySelector(`#toggle${rowNum} i`).classList.toggle("fa-check-square-o");
-        document.querySelector(`#toggle${rowNum} i`).classList.toggle("fa-square-o");
-
-        let formData = new FormData();
-        formData.append("discontinued", discontinued);
-        fetch("<%= baseUrl %>/sport/" + id, {
-            method: "POST",
-            body: new URLSearchParams([...formData])
-        })
-    }
-</script>
-
 <div class="row">
     <div class="col-sm-3"></div>
     <div class="col-sm-5">
@@ -61,7 +46,7 @@
                         <td class="pt-0 pb-0">
                             <% let newVal = (sport.discontinued === "Yes" ? "No" : "Yes"); %>
                             <button class="custom-check-box"
-                                onclick="onUpdate(<%= sport.id %>, <%= count %>)" id="toggle<%= count %>">
+                                onclick="toggleCustomCheckbox(<%= `'${baseUrl}/sport/${sport.id}'` %>, <%= count %>)" id="toggle<%= count %>">
                                 <i class="fa <%= sport.discontinued === 'Yes' ? 'fa-check-square-o' : 'fa-square-o' %>"
                                     style="font-size: 150%"></i>
                             </button>
