--- a/views/include/logoutTimer.html
+++ b/views/include/logoutTimer.html
@@ -1,6 +1,6 @@
 <div
     id="logoutWarning"
-    class="alert alert-warning lert-dismissable"
+    class="alert alert-warning alert-dismissable"
     style="display: none"
 >
     <button
